typescript/checker/tests/conformance/es6/yieldExpressions/generatorTypeCheck6.ts.stderr
error: ReturnRequired {
    span: Span {
        lo: BytePos(
            30,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck6.ts:2:15
  |
2 | function* g1(): number { }
  |               ^^^^^^^^

